--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+@import url("https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@2.0/nanumsquare.css");
+@import url("https://cdn.jsdelivr.net/gh/fonts-archive/HSSantokki/HSSantokki.css");
+
 @import "tailwindcss";
 
 :root {
@@ -8,11 +11,11 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
 
 @theme {
+  --font-HSSantokki: "HSSantokki", "sans-serif";
+
   --breakpoint-desktop: 1024px;
   --breakpoint-tablet: 768px;
 
@@ -40,5 +43,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "NanumSquare", sans-serif;
 }
